fix: remove text on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -102,7 +102,7 @@ a {
   color: #f8fff7;
 }
 .text-light-bold {
-  width: 612px;
+  /* width: 612px; */
   height: 108px;
   @media screen and (max-width: 500px) {
     width: auto;
@@ -188,6 +188,8 @@ a {
 }
 .logo {
   margin-top: -60px;
+  position: relative;
+  z-index: 100;
 }
 
 /* Hero */
@@ -209,22 +211,18 @@ a {
   @media screen and (max-width: 500px) {
     width: 100%;
     height: max-content;
-    padding-top: 3rem;
-    /* padding-left: 3rem; */
-    /* padding-right: 3rem; */
-    /* margin-bottom: 0; */
+    padding-top: 5rem;
   }
 }
 .circle {
-  width: 200px;
-  height: 200px;
+  width: 227px;
+  height: 227px;
   border-radius: 117px;
   background-color: #024080;
   border: 8.156000137329102px solid #00ace8;
   position: absolute;
+  left: 0px;
   z-index: 10;
-  transform: translate(-110%, -20%);
-  overflow: hidden;
 }
 
 .text-container {
@@ -233,17 +231,45 @@ a {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  text-align: center;
 }
 
 .slanted-text {
   transform: rotate(-15deg);
-  display: inline-block;
-  color: white;
-  direction: rtl;
   text-align: center;
 }
-
+.text-a {
+  font-size: 105px;
+  letter-spacing: 0px;
+  color: #ffffff;
+  font-weight: 800;
+  font-family: "Fb Spoiler";
+  text-align: center;
+  padding: 0 2rem;
+}
+.text-b {
+  font-size: 26px;
+  color: #ffd939;
+  font-weight: bold;
+  font-family: "Fb Spoiler";
+  text-align: center !important;
+  margin-top: -2rem;
+}
+.text-c {
+  font-size: 15px;
+  color: #ffffff;
+  font-weight: bold;
+  font-family: Fb Spoiler;
+  text-align: center;
+  margin-right: -3rem;
+}
+.text-mobile-blue {
+  font-size: 30px;
+  width: max-content;
+  color: #024080;
+  font-weight: bold;
+  font-family: "Fb Spoiler";
+  text-align: right;
+}
 .btn {
   width: 100%;
   height: 47px;
@@ -281,8 +307,6 @@ a {
 
 /* Register */
 .register-header {
-  /* width: 443px; */
-  /* height: 46px; */
   font-size: 29px;
   line-height: 34px;
   color: #024080;
@@ -327,15 +351,13 @@ a {
 }
 /* footer */
 .footer {
-  height: 107px;
+  min-height: 107px;
   width: 100%;
-  overflow: hidden;
-  flex-wrap: wrap;
   background-color: #2b9a44;
   @media screen and (max-width: 500px) {
+    flex-wrap: wrap;
     height: auto;
     width: 100%;
-
     padding: 1rem;
   }
 }
